# SpectrumAnalysis

./: .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
SpectrumAnalysis/: HDU_DATA.py  SpectrumAnalysis.py  io.py  printing.py  statistics.py  ui.py  util.py  visualization.py
demo/: InSb.ipynb  background_noise_analysis.ipynb  background_noise_process.ipynb  humidity_analysis.ipynb
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_SpectrumAnalysis.py
