[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SpectrumAnalysis"
version = "0.1.1"
description = "Spectrum Analysis for THz Time-domain data"
readme = "README.rst"
authors = [
  {name = "Wen-Hua Wu", email = "aw106@rice.edu"}
]
maintainers = [
  {name = "Wen-Hua Wu", email = "aw106@rice.edu"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  "typer",
  "matplotlib",
  "astropy",
  "numpy"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/WenhuaWuRiceUniv/SpectrumAnalysis/issues"
changelog = "https://github.com/WenhuaWuRiceUniv/SpectrumAnalysis/blob/master/changelog.md"
homepage = "https://github.com/WenhuaWuRiceUniv/SpectrumAnalysis"

[tool.setuptools.packages.find]
include = ["SpectrumAnalysis*"]

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

